configured receipt scanning with google vision ai

--- a/receiptProject/receiptProject.csproj
+++ b/receiptProject/receiptProject.csproj
@@ -12,6 +12,13 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0-beta.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Google.Cloud.Vision.V1" Version="3.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="se320final-42ad9e1a7f6d.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
