--- a/receiptProject/appsettings.Development.json
+++ b/receiptProject/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ReceiptProject;User=root;Password=540770;Port=3306;"
+  },
+  "GoogleCloudCredentials": "YOUR_CREDENTIALS_JSON_HERE"
 }
