fixed credential workflow

--- a/.github/workflows/setupCredentials.yml
+++ b/.github/workflows/setupCredentials.yml
@@ -12,12 +12,18 @@ on:
           - development
           - production
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Create appsettings.Development.json
         if: github.event.inputs.environment == 'development'
@@ -44,4 +50,5 @@ jobs:
           title: "Update development credentials"
           body: "This PR updates the development credentials from GitHub Secrets"
           branch: update-credentials
-          base: main 
+          base: main
+          delete-branch: true 
