--- a/.github/workflows/setupCredentials.yml
+++ b/.github/workflows/setupCredentials.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create appsettings.Development.json
         if: github.event.inputs.environment == 'development'
