--- a/.github/workflows/setupCredentials.yml
+++ b/.github/workflows/setupCredentials.yml
@@ -27,9 +27,10 @@ jobs:
 
       - name: Create appsettings.Development.json
         if: github.event.inputs.environment == 'development'
+        env:
+          CREDENTIALS: ${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}
         run: |
-          cat > appsettings.Development.json << 'EOL'
-          {
+          echo '{
             "Logging": {
               "LogLevel": {
                 "Default": "Information",
@@ -39,9 +40,8 @@ jobs:
             "ConnectionStrings": {
               "DefaultConnection": "Server=localhost;Database=ReceiptProject;User=root;Password=540770;Port=3306;"
             },
-            "GoogleCloudCredentials": ${{ toJSON(secrets.GOOGLE_CLOUD_CREDENTIALS) }}
-          }
-          EOL
+            "GoogleCloudCredentials": $CREDENTIALS
+          }' > appsettings.Development.json
 
       - name: Create Pull Request
         if: github.event.inputs.environment == 'development'
