--- a/.github/workflows/setupCredentials.yml
+++ b/.github/workflows/setupCredentials.yml
@@ -27,9 +27,8 @@ jobs:
 
       - name: Create appsettings.Development.json
         if: github.event.inputs.environment == 'development'
-        env:
-          CREDENTIALS: ${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}
         run: |
+          echo '${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}' > temp_credentials.json
           echo '{
             "Logging": {
               "LogLevel": {
@@ -40,8 +39,9 @@ jobs:
             "ConnectionStrings": {
               "DefaultConnection": "Server=localhost;Database=ReceiptProject;User=root;Password=540770;Port=3306;"
             },
-            "GoogleCloudCredentials": $CREDENTIALS
+            "GoogleCloudCredentials": '"$(cat temp_credentials.json)"'
           }' > appsettings.Development.json
+          rm temp_credentials.json
 
       - name: Create Pull Request
         if: github.event.inputs.environment == 'development'
