--- a/receiptProjectBackend/appsettings.json
+++ b/receiptProjectBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=ReceiptProject;User=root;Password=540770;Port=3306;AllowPublicKeyRetrieval=true;SslMode=none;ConnectionProtocol=Tcp;UseCompression=false;IPv6=false;"
+    "DefaultConnection": "Server=127.0.0.1;Database=ReceiptProject;User=root;Password=CPSC40801;Port=3306;AllowPublicKeyRetrieval=true;SslMode=none;ConnectionProtocol=Tcp;UseCompression=false;IPv6=false;"
   },
   "Logging": {
     "LogLevel": {
